# python-samples

./: makefile  pyproject.toml
courses/mit6.824/lec1/: map_reduce.ipynb
samples/architecture_patterns_with_python/: .env.example  Dockerfile  autoapp.py  config.py  docker-compose.yml  model.py  orm.py  repository.py  requirements.txt  service.py
samples/architecture_patterns_with_python/allocation/adapter/: orm.py  repository.py
samples/architecture_patterns_with_python/allocation/domain/: command.py  model.py
samples/architecture_patterns_with_python/allocation/entrypoint/: autoapp.py
samples/architecture_patterns_with_python/allocation/services/: handlers.py  message_bus.py  service.py  unit_of_work.py
samples/architecture_patterns_with_python/tests/: conftest.py  random_refs.py  test_allocate.py  test_batches.py  test_orm.py  test_service.py
samples/architecture_patterns_with_python/tests/e2e/: test_api.py
samples/architecture_patterns_with_python/tests/integration/: test_orm.py  test_uow.py
samples/architecture_patterns_with_python/tests/unit/: test_allocate.py  test_batches.py  test_handler.py  test_product.py  test_service.py
samples/fluent_python/01-data-model/: data-model.ipynb  french_deck.py  vector2d.py
samples/fluent_python/02-array-of-sequences/: array-of-sequences.ipynb
samples/fluent_python/03-dicts-and-sets/: dicts-and-sets.ipynb
samples/fluent_python/04-unicode-text-versus-bytes/: unicode-text-versus-bytes.ipynb
samples/fluent_python/05-data-class-builders/: coordinates.py  data-class-builders.ipynb
samples/fluent_python/05-data-class-builders/dataclass/: coordinates.py  resource.py
samples/fluent_python/10-design-patterns-with-first-class-functions/: design-patterns-with-first-class-functions.ipynb
samples/fluent_python/10-design-patterns-with-first-class-functions/classic/: promotion.py
samples/fluent_python/10-design-patterns-with-first-class-functions/function/: promotion.py
samples/fluent_python/11-pythonic-object/vector2d/: test_vector2d.py  vector2d.py
samples/unit_testing_pattern/: customer.py  store.py
samples/unit_testing_pattern/ch05/: controller.py
samples/unit_testing_pattern/ch06/listing1/: price_engine.py
samples/unit_testing_pattern/ch06/listing8_/: auth_v3.py
samples/unit_testing_pattern/tests/ch02/: test_customer.py  test_customer_with_london_style.py
samples/unit_testing_pattern/tests/ch03/: conftest.py  (+3 more)
(+8 files in other folders)
