[tool.poetry]
name = "python-samples"
version = "0.1.0"
description = ""
authors = ["huangkai <h1770360848@outlook.com>"]
maintainers = ["huangkai <h1770360848@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Huangkai1008/python-samples"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py39']
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
